# docs/swagger.yaml
@@ -1,5 +1,23 @@
 basePath: /
 definitions:
+  model.CreateSubscriptionRequest:
+    properties:
+      cost_rub:
+        type: integer
+      end_date:
+        type: string
+      service_name:
+        type: string
+      start_date:
+        type: string
+      user_id:
+        type: string
+    required:
+    - cost_rub
+    - service_name
+    - start_date
+    - user_id
+    type: object
   model.Subscription:
     properties:
       cost_rub:
@@ -7,6 +25,19 @@ definitions:
       end_date:
         type: string
       id:
+        type: string
+      service_name:
+        type: string
+      start_date:
+        type: string
+      user_id:
+        type: string
+    type: object
+  model.UpdateSubscriptionRequest:
+    properties:
+      cost_rub:
+        type: integer
+      end_date:
         type: string
       service_name:
         type: string
@@ -52,7 +83,7 @@ paths:
         name: subscription
         required: true
         schema:
-          $ref: '#/definitions/model.Subscription'
+          $ref: '#/definitions/model.CreateSubscriptionRequest'
       produces:
       - application/json
       responses:
@@ -131,7 +162,7 @@ paths:
         name: subscription
         required: true
         schema:
-          $ref: '#/definitions/model.Subscription'
+          $ref: '#/definitions/model.UpdateSubscriptionRequest'
       produces:
       - application/json
       responses:
